# vigilant-happiness

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  image_compressor_api.py  main.py  pyproject.toml  redis_streams_manager.py  requirements.txt  s3_buckets_images_manager.py  schemas.py  task_definition.json  tasks.py
.github/workflows/: aws.yml
app/: celery_config.py  main.py  requirements.txt
app/api/: image_api.py
app/core/: tasks.py
app/models/: schemas.py
app/services/: redis_service.py  s3_service.py
